--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@colony/sdk": "^3.2.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "ethers": "^5.7.2",
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
